--- a/dashboard-client/package.json
+++ b/dashboard-client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.12.0",
+    "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.45.1",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
